--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -86,6 +86,8 @@ body {
     border: 1px solid #bbb;
 }
 
+.main-view:nth-of-type(2){display:none;}
+
 .sequence-title {
     font-family: courier;
     font-size: 12px;
